--- a/Algorithm/피보나치_수열.md
+++ b/Algorithm/피보나치_수열.md
@@ -1,4 +1,14 @@
-# 1 재귀 함수
+# 📁 피보나치 수열(Fibonacci Sequence)
+첫 번째, 두 번째 항이 1이며 그 다음은 바로 앞 두항의 합인 수열
+</br>
+
+## 점화식
+F1 = F2 = 1
+Fn= Fn-1+Fn-2 (n > 2)
+</br>
+
+### 1 재귀 함수
+```
 def recursive_fib(n):
     if n == 0:
         return 0
@@ -6,10 +16,11 @@ def recursive_fib(n):
         return 1
     else:
         return fib(n - 1) + fib(n - 2)
+```
 
 
-
-# 2 일반 함수
+### 2 일반 함수
+```
 def fib(n) : 
     a, b = 1,1
     if n = 0 :
@@ -21,3 +32,4 @@ def fib(n) :
         a, b = b, a+b
     
     return a
+```
