--- a/Algorithm/정렬_알고리즘.md
+++ b/Algorithm/정렬_알고리즘.md
@@ -22,7 +22,7 @@
 
 배열의 선택한 요소를 그 앞에 이미 정렬된 배열 부분과 비교하여, 올바른 위치를 찾아 삽입하여 정렬하는 알고리즘.
 
-[##_Image|kage@YU9LJ/btshVBIxKWs/gK3tgIDj1MKPnmTolufl2k/img.png|CDM|1.3|{"originWidth":524,"originHeight":410,"style":"floatLeft","width":314,"filename":"blob"}_##]
+<img src="https://velog.velcdn.com/images/dev____123/post/2bc1ffc9-e442-4464-b2fe-b031cc140e59/image.png" width="314" >
 
 두 번째 원소를 key 값으로 하여 그 앞의 원소와 비교
 
@@ -30,7 +30,7 @@
 
 더 이상 비교할 원소가 없기 때문에 1회전 종료
 
-[##_Image|kage@k9ePj/btshA4svR3x/OeE8bqsS853dk2rbKJsamk/img.png|CDM|1.3|{"originWidth":524,"originHeight":275,"style":"floatLeft","width":314,"filename":"blob"}_##][##_Image|kage@bzjxOB/btshWtQ98md/GwEjCaixjSmIKYD0jKJMEk/img.png|CDM|1.3|{"originWidth":520,"originHeight":444,"style":"floatLeft","width":312,"filename":"blob"}_##]
+<img src="https://velog.velcdn.com/images/dev____123/post/d8615af4-6700-407d-8cc3-d451aee5a6f6/image.png" width="314" >
 
  세 번째를 key값으로 하여 그 앞의 원소들과 비교
 
@@ -40,6 +40,9 @@
 
 더 이상 비교할 원소가 없기 때문에 2회전 종료
 
+
+<img src="https://velog.velcdn.com/images/dev____123/post/86345e5e-13ba-4cfd-87bd-ea6b3f7ac919/image.png" width="314" >
+
 네 번째를 key값으로 하여 그 앞의 원소들과 비교
 
  5 > key :  key값이 더 작으므로 앞의 원소를 뒤로 옮긴다.
@@ -48,9 +51,10 @@
 
  2 < key : key값이 더 작으므로 앞의 원소를 뒤로 옮긴다.
 
-더 이상 비교할 원소가 없기 때문에 2회전 종료
+더 이상 비교할 원소가 없기 때문에 3회전 종료
 
-[##_Image|kage@cdEdhu/btshZu3kRFO/NtDlulFc2bMMX7UvUeNV1k/img.png|CDM|1.3|{"originWidth":515,"originHeight":278,"style":"floatLeft","width":311,"height":168}_##]
+
+<img src="https://velog.velcdn.com/images/dev____123/post/9973b6d5-2842-4343-b195-2acf12a5d891/image.png" width="314" >
 
 마지막 원소를 key값으로 하여 그 앞의 원소들과 비교
 
@@ -71,6 +75,7 @@ def insertion_sort(arr):
 		arr[j+1] = key # 찾은 자리에 key값 넣기
 	return arr
 ```
+</br>
 
 ```
 def insertion_sort(arr):
