--- a/Algorithm/정렬_알고리즘.md
+++ b/Algorithm/정렬_알고리즘.md
@@ -14,7 +14,7 @@
 
 \- 퀵 정렬(Quick Sort)
 
-\- 히프 정렬(Heap sort)
+\- 힙 정렬(Heap sort)
 
 \- 합병 정렬(Merge sort)
 
@@ -90,7 +90,44 @@ def insertion_sort(arr):
                 break
     return arr
 ```
+</br>
+</br>
+
+---
 
 #### **👉 시간복잡도**
 
 n개의 데이터가 있을 때, 이미 정렬되어 있는 최선의 경우 O(N) / 최악의 경우 O(n²) / 평균 O(n²) 의 시간 복잡도를 가진다.
+
+### **📝선택 정렬 (selection Sort)** 
+
+배열의 정렬되지 않은 원소들 중에서 최소값을 찾아서 정렬된 배열 다음 자리에 위치한 원소와 교체한다.
+
+<img src="https://github.com/yuuDev01/study/assets/52283043/6a836526-2947-473a-8c63-a7bebbcfd4ed" width="450" >
+<img src="https://github.com/yuuDev01/study/assets/52283043/26c301bf-0ecb-44c1-9343-9021c0d6e019" width="450" >
+<img src="https://github.com/yuuDev01/study/assets/52283043/d66eb134-7db5-4905-9167-fbf8cb1624d8" width="450" >
+<img src="https://github.com/yuuDev01/study/assets/52283043/31b090e9-d3f4-4df7-9645-f038959de8c0" width="450" >
+
+```
+def selection_sort(arr):
+    length = len(arr)
+    for i in range(0, length-1):
+        min = i
+        # 배열에서 가장 정수값 min을 찾는다.( 순차탐색)
+        for j in range(i+1,length):
+            if arr[j] < arr[min] :
+                min = j
+        # i와 min 값 교체
+        arr[i], arr[min] = arr[min], arr[i]
+    return arr
+```
+
+#### **👉 시간복잡도 O(n²) **
+
+---
+
+### **📑선택 정렬 (selection Sort) **
+### **📑버블 정렬(Bubble Sort) **
+### **📑퀵 정렬(Quick Sort) **
+### **📑힙 정렬(Heap sort) **
+### **📑합병 정렬(Merge sort) **
